--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,27 @@
-<p>login</p>
+<h1>Login</h1>
+<form>
+    <!-- Email input -->
+    <div class="form-outline mb-4">
+      <input type="email" id="form2Example1" class="form-control" [(ngModel)]="email" name="email"/>
+      <label class="form-label" for="form2Example1">Email address</label>
+    </div>
+  
+    <!-- Password input -->
+    <div class="form-outline mb-4">
+      <input type="password" id="form2Example2" class="form-control" [(ngModel)]="password" name="password" />
+      <label class="form-label" for="form2Example2">Password</label>
+    </div>
+  
+    <!-- 2 column grid layout for inline styling -->
+    <div class="row mb-4">
+      <div class="col d-flex justify-content-center">
+        <!-- Checkbox -->
+      </div>
+  
+
+    </div>
+  
+    <!-- Submit button -->
+    <button (click)="signIn()" type="button" class="btn btn-primary btn-block mb-4" >Sign in</button>
+  
+  </form>
